# ncert-downloader

./: .gitignore  README.md  data.json  download.py  generate_data.py  main.py  merge_pdfs.py  pyproject.toml  requirements.txt  sourceScript.js
tests/: conftest.py  test_core.py  test_generate_data.py
